# cel-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  notes.txt
.claude/: settings.json
.claude/skills/verifying-begin-ui/: SKILL.md  cdp_eval.py
.cursor/rules/: avoid-heap-allocations.mdc  doc-comments.mdc
.githooks/: pre-commit
.github/workflows/: ci.yml
begin/: Cargo.toml  Dioxus.toml  package-lock.json  package.json
begin/assets/: demo.adm2  demo.pm  graph.css  graph.js  swc-icon-zoom-in.js  swc-icon-zoom-out.js  swc-scale-medium.js  swc-theme-light.js  swc.js  versions.toml
begin/js/: spectrum-entry.js
begin/src/: app.rs  bridge.rs  demo_source.rs  graph_view.rs  inspector.rs  main.rs  source_panel.rs  spectrum.rs
begin/src-assets/: stlab-logo.eps
cel-parser/: Cargo.toml  OPERATION_TABLE_EXAMPLE.md
cel-parser/src/: ast.rs  error.rs  lex_lexer.rs  lib.rs  op_table.rs  parser_context.rs  ty.rs
cel-rs-macros/: Cargo.toml
cel-rs-macros/src/: lib.rs
cel-rs-macros/tests/: expression_compile_fail.rs  playground.rs
cel-rs-macros/tests/ui/: incomplete_expression.rs  incomplete_expression.stderr  type_mismatch.rs  type_mismatch.stderr  undefined_identifier.rs  undefined_identifier.stderr
cel-runtime/: Cargo.toml
cel-runtime/src/: c_stack_list.rs  dyn_segment.rs  lib.rs  list_traits.rs  memory.rs  raw_segment.rs  raw_sequence.rs  raw_stack.rs  raw_vec.rs  segment.rs  tuple_list.rs
cel-runtime/src/parser/: error.rs  lex_lexer.rs  mod.rs  op_table.rs
docs/: VISION.md
docs/superpowers/: 2026-07-18-phase-3-handoff.md  2026-07-20-phase-3-vscode-extension-handoff.md
docs/superpowers/plans/: 2026-06-03-annotate-snippets.md  2026-06-16-parse-error-span.md  2026-06-17-op-lookup-error-spans.md  2026-06-19-if-and-short-circuit.md  2026-06-20-span-diagnostics.md  2026-06-22-property-model.md  2026-06-23-begin.md  2026-06-24-flow-arrows.md  2026-06-25-self-reference.md  2026-06-25-spectrum-integration.md  2026-06-26-conditionals.md  2026-06-27-conditionals-display.md  2026-06-28-pm-lang.md  2026-07-02-begin-pmlang-integration.md  2026-07-07-cel-tuples.md  2026-07-09-begin-forced-cells-ui.md  2026-07-09-planner-forced-outputs.md  2026-07-10-begin-graph-pan-zoom.md  2026-07-10-begin-graph-view-live-resize.md  2026-07-10-begin-hot-reload.md  2026-07-10-begin-spectrum2-zoom-controls.md  2026-07-11-begin-spectrum2-theme-tokens.md  2026-07-13-begin-spectrum-esbuild-pipeline.md  2026-07-14-begin-forced-relationships-ui.md  2026-07-17-cel-parser-ast-context.md  2026-07-17-pm-lang-lsp-parser-context.md  2026-07-17-pm-lang-native-tuple-outputs.md  2026-07-18-pm-lang-ast.md  2026-07-18-pm-lang-type-checking-v1.md  2026-07-20-pm-lang-vscode-extension.md  2026-07-20-pm-lsp.md
docs/superpowers/specs/: 2026-06-03-annotate-snippets-design.md  2026-06-17-op-lookup-error-spans-design.md  2026-06-18-error-message-conventions-design.md  2026-06-19-if-and-short-circuit-design.md  2026-06-20-span-diagnostics-design.md  2026-06-22-property-model-design.md  2026-06-23-begin-design.md  2026-06-24-flow-arrows-design.md  2026-06-25-self-reference-design.md  2026-06-25-spectrum-integration-design.md  2026-06-26-conditionals-design.md  2026-06-27-conditionals-display-design.md  2026-06-28-pm-lang-design.md  2026-07-02-begin-pmlang-integration-design.md  2026-07-06-project-vision-doc-design.md  2026-07-07-cel-tuples-design.md  2026-07-09-begin-forced-cells-ui-design.md  2026-07-09-planner-forced-outputs-design.md  2026-07-10-begin-graph-pan-zoom-design.md  2026-07-10-begin-graph-view-live-resize-design.md  2026-07-10-begin-hot-reload-design.md  2026-07-10-begin-spectrum2-zoom-controls-design.md  2026-07-11-begin-spectrum2-theme-tokens-design.md  2026-07-14-begin-forced-relationships-ui-design.md  2026-07-17-pm-lang-language-server-design.md  2026-07-17-pm-lang-native-tuple-outputs-design.md
editors/vscode-pm-lang/: README.md  package-lock.json  package.json  tsconfig.json
editors/vscode-pm-lang/src/: extension.ts  serverPath.ts
editors/vscode-pm-lang/syntaxes/: pm-lang.tmLanguage.json
editors/vscode-pm-lang/test/: serverPath.test.ts
pm-lang/: Cargo.toml
pm-lang/src/: ast.rs  ast_parser.rs  error.rs  lib.rs  parser.rs  token_cursor.rs  trivia.rs  type_registry.rs  typecheck.rs
pm-lsp/: Cargo.toml
pm-lsp/src/: diagnostics.rs  dispatch.rs  lib.rs  main.rs
property-model/: Cargo.toml
property-model/src/: cell.rs  conditional.rs  error.rs  lib.rs  planner.rs  relationship.rs  sheet.rs
property-model/tests/: integration.rs
src/: c_stack_list.rs  dyn_segment.rs  dyn_segment_aligned_stack.rs  dyn_sement.rs  exp_type_list.rs  lib.rs  list_traits.rs  memory.rs  raw_aligned_stack.rs  raw_aligned_vec.rs  raw_segment.rs  raw_segment_aligned_stack.rs  raw_sequence.rs  raw_stack.rs  raw_vec.rs  segment.rs  segment_aligned_stack.rs  tuple_list.rs  type_list.rs
xtask/: Cargo.toml
xtask/src/: main.rs
