[package]
name = "cel-rs"
version = "0.1.0"
edition = "2024"
description = "A stack-based runtime for developing domain specific languages"

[dependencies]
cel-runtime = { path = "./cel-runtime" }
cel-rs-macros = { path = "./cel-rs-macros" }
proc-macro2 = "1.0"

[workspace]
members = [
    "cel-runtime",
    "cel-rs-macros"
]

[lib]
name = "cel_rs"
path = "src/lib.rs"

[profile.dev]
incremental = false

[profile.test]
incremental = false 
