[package]
name = "cel-rs"
version = "0.1.0"
edition = "2024"
description = "A stack-based runtime for developing domain specific languages"

[dependencies]
cel-runtime = { path = "./cel-runtime" }
cel-parser = { path = "./cel-parser" }
cel-rs-macros = { path = "./cel-rs-macros" }
proc-macro2 = "1.0"

[features]
playground = ["cel-runtime/playground"]

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = "warn"

[workspace]
members = [
    "cel-runtime",
    "cel-parser",
    "cel-rs-macros",
    "property-model",
    "pm-lang",
    "pm-lsp",
    "begin",
    "xtask",
]
[lib]
name = "cel_rs"
path = "src/lib.rs"

[profile.dev]
incremental = false

[profile.test]
incremental = false 
