[package]
name = "begin"
version = "0.1.0"
edition = "2024"
description = "Cross-platform property model development environment"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
playground = []

[dependencies]
dioxus = { version = "0.7.9", features = [] }
futures-channel = "0.3"
futures-util = "0.3"
property-model = { path = "../property-model" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
anyhow = "1"
slotmap = "1.0"
cel-parser = { path = "../cel-parser" }
annotate-snippets = "0.12"
pm-lang = { path = "../pm-lang" }

[lints]
workspace = true
