[package]
name = "cel-parser"
version = "0.1.0"
edition = "2024"
description = "A recursive descent parser for CEL (Common Expression Language) expressions"

[dependencies]
cel-runtime = { path = "../cel-runtime" }
anyhow = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
annotate-snippets = "0.12"
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"

[features]
span-diagnostics = []

[lints]
workspace = true
