[package]
name = "cel-runtime"
version = "0.1.0"
edition = "2024"
description = "A stack-based runtime for developing domain specific languages"

[dependencies]
anyhow = "1.0"
typenum = "1.18.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
owo-colors = { version = "4.2", features = ["supports-colors"] }
syn = { version = "2.0", features = ["extra-traits", "parsing"] }
phf = { version = "0.11", features = ["macros"] }
once_cell = "1.19"