[package]
name = "pm-lsp"
version = "0.1.0"
edition = "2024"
description = "Language server for pm-lang, surfacing syntax and type diagnostics over LSP"

[dependencies]
cel-parser = { path = "../cel-parser" }
pm-lang = { path = "../pm-lang" }
lsp-server = "0.10"
lsp-types = "0.97"
serde_json = "1.0"
anyhow = "1.0"

[lib]
name = "pm_lsp"
path = "src/lib.rs"

[[bin]]
name = "pm-lsp"
path = "src/main.rs"

[lints]
workspace = true
